--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=projectTS-backend
 #server.servlet.encoding.force=true
 
 spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_UESR}
+spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:mappers/*.xml
