--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=projectTS-backend
-
+server.forward-headers-strategy=framework
 #server.servlet.encoding.charset=UTF-8
 #server.servlet.encoding.enabled=true
 #server.servlet.encoding.force=true
-
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
@@ -11,7 +10,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:mappers/*.xml
 # mybatis.configuration.cache-enabled=true
 mybatis.type-aliases-package=org.researchandreview.projecttsbackend.model
-
 spring.rabbitmq.host=${MQ_URL}
 spring.rabbitmq.port=${MQ_PORT}
 spring.rabbitmq.username=${MQ_USER}
